AG-10498 fix setting desc link style
Merge in EXTENSIONS/browser-extension from fix/AG-10498 to master

Squashed commit of the following:

commit 18e9fbb9d40fad2eea82d875a364c917d2a1daf2
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Oct 7 23:12:36 2021 +0300

    fix setting desc a style

--- a/Extension/src/pages/options/styles/setting.pcss
+++ b/Extension/src/pages/options/styles/setting.pcss
@@ -116,10 +116,6 @@
         & a {
             color: var(--green74);
             text-decoration: underline;
-
-            @media (min-width: 640px) {
-                white-space: nowrap;
-            }
         }
     }
 
